<resources>
    <string name="app_name">SeandMeal</string>
    <string name="nombre">Nombre</string>
    <string name="tipo_de_tarjeta">Tipo de tarjeta:</string>
    <string name="pass">Contraseña</string>
    <string name="repetir_pass">Repetir Contraseña</string>
    <string name="debito">Débito</string>
    <string name="credito">Crédito</string>
    <string name="nroTarjeta">Número de Tarjeta</string>
    <string name="ccv">CCV</string>
    <string name="vencimiento">Fecha de vencimiento</string>
    <string name="mes">Mes</string>
    <string name="year">Año</string>
    <string name="cbu">CBU</string>
    <string name="alias_cbu">Alias CBU</string>
    <string name="cargaInicial">¿Realizar carga inicial?</string>
    <string name="tyc">Acepto los términos y condiciones</string>
    <string name="email">Email</string>
    <string name="registrar">Registrar</string>
    <string name="mensajePass">Las contraseñas no coinciden</string>
    <string name="nuevo_plato">Nuevo Plato</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="precio">Precio</string>
    <string name="calorias">Calorías</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_lista_platos">ListaPlatos</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_permission_denied">El permiso no se ha otorgado</string>
    <string name="permission_required_toast">Se requiere el permiso</string>
    <string name="permission_rationale_location">Se requiere permiso de ubicación</string>
</resources>