<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.SeandMeal"
    tools:context=".NuevoPlato">

    <include layout="@layout/toolbar" />

    <TextView
        android:id="@+id/lblNuevoPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nuevo_plato"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:hint="@string/titulo"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/btnCamara"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="16dp"
            android:theme="@style/Theme.SeandMeal"
            app:srcCompat="@drawable/baseline_photo_camera_white_24dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imagenPlatoFoto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/lblDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion"
        android:paddingTop="30dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/precio"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/txtCalorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/calorias"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGuardarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/guardar"
        android:textColor="@color/white" />
</LinearLayout>